ROR-736  Refactoring of GTFS and file classification routes (#67)